man page translations: update Polish

--- a/doc/man/po4a/po/pl.po
+++ b/doc/man/po4a/po/pl.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.5.0\n"
 "POT-Creation-Date: 2023-07-02 22:01+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Grzegorz Pruchniakowski <gootector@o2.pl>, 2022\n"
-"Language-Team: Polish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/pl/)\n"
+"Last-Translator: Grzegorz Pruchniakowski <gootector@o2.pl>, 2022-2023\n"
+"Language-Team: Polish (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pl/)\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -339,10 +339,8 @@ msgstr "Zapisuje wszystkie powiadomienia do pliku <parameter>nazwa-pliku</parame
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvextract.xml:136
 #: doc/man/mkvmerge.xml:2271
-#, fuzzy
-#| msgid "<option>--no-cues</option>"
 msgid "<option>--flush-on-close</option>"
-msgstr "<option>--no-cues</option>"
+msgstr "<option>--flush-on-close</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvextract.xml:139
@@ -371,10 +369,8 @@ msgstr ""
 #: doc/man/mkvinfo.xml:201
 #: doc/man/mkvmerge.xml:2294
 #: doc/man/mkvpropedit.xml:500
-#, fuzzy
-#| msgid "<option>--no-global-tags</option>"
 msgid "<option>--abort-on-warnings</option>"
-msgstr "<option>--no-global-tags</option>"
+msgstr "<option>--abort-on-warnings</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvextract.xml:162
@@ -4697,7 +4693,7 @@ msgstr "&matroska; wspiera rozszerzony zestaw tagów będący już nieaktualnym 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:3178
 msgid "Scope of the tags"
-msgstr ""
+msgstr "Zakres tagów"
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:3181
