--- a/doc/man/po4a/po/it.po
+++ b/doc/man/po4a/po/it.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2023-07-02 22:01+0200\n"
+"POT-Creation-Date: 2023-08-20 10:59+0200\n"
 "PO-Revision-Date: 2022-03-08 08:07+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/it/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "78.0"
-msgstr "78.0"
+msgid "79.0"
+msgstr "79.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -38,8 +38,10 @@ msgstr "78.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-07-02"
-msgstr ""
+#, fuzzy
+#| msgid "2021-08-30"
+msgid "2023-08-20"
+msgstr "2021-06-13"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5695,10 +5697,6 @@ msgstr ")"
 
 #~ msgid "2021-12-27"
 #~ msgstr "2021-12-27"
-
-#~| msgid "2021-06-13"
-#~ msgid "2021-08-30"
-#~ msgstr "2021-06-13"
 
 #~ msgid "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
 #~ msgstr "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
