--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-man\n"
-"POT-Creation-Date: 2023-07-02 22:01+0200\n"
+"POT-Creation-Date: 2023-08-20 10:59+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2022\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_CN/)\n"
@@ -27,8 +27,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "78.0"
-msgstr "78.0"
+msgid "79.0"
+msgstr "79.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -36,8 +36,10 @@ msgstr "78.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-07-02"
-msgstr ""
+#, fuzzy
+#| msgid "2021-08-30"
+msgid "2023-08-20"
+msgstr "2019-06-22"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5760,10 +5762,6 @@ msgstr ")"
 #~| msgid "2017-12-17"
 #~ msgid "2021-12-27"
 #~ msgstr "2017-12-17"
-
-#~| msgid "2019-08-24"
-#~ msgid "2021-08-30"
-#~ msgstr "2019-06-22"
 
 #~| msgid "Sets the 'default' flag for the given track (see section <link linkend=\"mkvmerge.track_ids\">track IDs</link>) if the optional argument <parameter>bool</parameter> is not present.  If the user does not explicitly select a track himself then the player should prefer the track that has his 'default' flag set. Only one track of each kind (audio, video, subtitles, buttons) can have his 'default' flag set.  If the user wants no track to have the default track flag set then he has to set <parameter>bool</parameter> to <constant>0</constant> for all tracks."
 #~ msgid "Sets the &quot;default track&quot; flag for the given track (see section <link linkend=\"mkvmerge.track_ids\">track IDs</link>) if the optional argument <parameter>bool</parameter> is set to <constant>1</constant> or if it isn't present.  If the user does not explicitly select a track, the player should prefer the track that has his &quot;default track&quot; flag set. Only one track of each kind (audio, video, subtitles, buttons) can have his &quot;default track&quot; flag set.  If the user wants no track to have the default track flag set then he has to set <parameter>bool</parameter> to <constant>0</constant> for all tracks."
