--- a/doc/man/po4a/po/bg.po
+++ b/doc/man/po4a/po/bg.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2023-07-02 22:01+0200\n"
+"POT-Creation-Date: 2023-08-20 10:59+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>, 2019-2022\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
@@ -27,8 +27,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "78.0"
-msgstr "78.0"
+msgid "79.0"
+msgstr "79.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -36,8 +36,10 @@ msgstr "78.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-07-02"
-msgstr ""
+#, fuzzy
+#| msgid "2019-08-24"
+msgid "2023-08-20"
+msgstr "24.08.2019"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5690,9 +5692,6 @@ msgstr ")"
 
 #~ msgid "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
 #~ msgstr "<option>--nalu-size-length</option> <parameter>TID:н</parameter>"
-
-#~ msgid "2019-08-24"
-#~ msgstr "24.08.2019"
 
 #~ msgid "Subtitles"
 #~ msgstr "Субтитри"
