--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (79.0-0~bunkus01) lunar; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 20 Aug 2023 10:59:29 +0200
+
 mkvtoolnix (78.0-0~bunkus01) lunar; urgency=low
 
   * New version.
