--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-07-27 13:21+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2023\n"
+"Last-Translator: Germano Fonseca <celger@bol.com.br>, 2016,2023\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -5769,9 +5769,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Dependendo dessa configuração, o idioma também pode ser derivado do nome do arquivo se o idioma no arquivo de origem for 'indeterminado' ('und')."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2296
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Derivação de idiomas de faixas a partir de nomes de arquivos"
+msgstr "Derivar dos nomes dos arquivos a fla&g \"exibição forçada\" para as legendas:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
@@ -8453,9 +8453,9 @@ msgid "Language (IETF BCP 47)"
 msgstr "Idioma (IETF BCP 47)"
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language (obsolete)"
-msgstr "Idioma selecionado abaixo"
+msgstr "Idioma (obsoleto)"
 
 #: src/mkvtoolnix-gui/chapter_editor/renumber_sub_chapters_parameters_dialog.cpp:53
 #, no-c-format
@@ -11727,9 +11727,9 @@ msgid "Specifies a yaw rotation to the projection."
 msgstr "Especifica uma rotação de guinada para a projeção."
 
 #: src/common/property_element.cpp:143
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Specifies the language of the track (obsolete)."
-msgstr "Especifica o idioma da faixa."
+msgstr "Especifica o idioma da faixa (obsoleto)"
 
 #: src/common/property_element.cpp:144
 #, no-c-format
@@ -11879,11 +11879,9 @@ msgid "Stop at the first cluster"
 msgstr "Parar no primeiro cluster"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:54
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stops processing after the primary video track ends, discarding any remaining packets of other tracks."
-msgstr ""
-"  --stop-after-video-ends  Interrompe o processamento após o fim da faixa de vídeo principal,\n"
-"                           descartando quaisquer pacotes restantes de outras faixas.\n"
+msgstr "Para o processamento após terminar a faixa de vídeo primária, descartando qualquer pacote restante das outras faixas."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
@@ -11920,7 +11918,7 @@ msgstr "Propriedades de legenda e capítulo"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:518
 #, no-c-format
 msgid "Subtitle files often contain the word 'forced' in their file name to signal that they're intended for 'forced display' only (e.g. when they speak Elfish in 'Lord of the Rings')."
-msgstr ""
+msgstr "Arquivos de legendas geralmente contêm a palavra 'forced' no seu nome para sinalizar que eles voltados apenas para 'exibição forçada' (por exemplo, quando eles falam Élfico em 'O Senhor dos Anéis')."
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:56
 #, no-c-format
@@ -12168,7 +12166,7 @@ msgstr "A GUI pode fazer a varredura desses arquivos, apresentar os resultados i
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:519
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr ""
+msgstr "O GUI pode definir a flag 'exibição forçada' para as faixas se o nome do arquivo coincidir com a expressão regular."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13797,7 +13795,7 @@ msgstr "O valor não segue a estrutura geral das etiquetas de idioma IETF BCP 47
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1477
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "O valor para derivar dos nomes dos arquivos a flag 'exibição forçada' para as legendas precisa ser uma expressão regular válida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
