translations: fix spelling error

--- a/po/ca.po
+++ b/po/ca.po
@@ -11908,7 +11908,7 @@ msgstr "Emmagatzema els canvis de les dades CodecPrivate en els elements CodecSt
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "S'emmagatzema el resultat a la memòria cau arxivada"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
