--- a/po/de.po
+++ b/po/de.po
@@ -11863,7 +11863,7 @@ msgstr "Speichert Änderungen an den CodecPrivate-Daten in CodecState-Elementen 
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Speichern des Ergebnis im Cache schlug fehl"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
