--- a/po/fr.po
+++ b/po/fr.po
@@ -11870,7 +11870,7 @@ msgstr "Stocke les modifications des données de CodecPrivate dans les élément
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Stockage du résultat en cache effectué"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
