--- a/po/lt.po
+++ b/po/lt.po
@@ -11707,7 +11707,7 @@ msgstr ""
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
