--- a/po/nl.po
+++ b/po/nl.po
@@ -11831,7 +11831,7 @@ msgstr "Bewaar wijzigingen in CodecPrivate-gegevens in CodecState-elementen in p
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
