--- a/po/pl.po
+++ b/po/pl.po
@@ -11850,7 +11850,7 @@ msgstr "Przechowuje zmiany w danych CodecPrivate w elementach CodecState zamiast
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
