--- a/po/pt.po
+++ b/po/pt.po
@@ -11871,7 +11871,7 @@ msgstr "Armazenar as alterações nos dados CodecPrivate em elementos CodecState
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
