--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11895,7 +11895,7 @@ msgstr "Armazenar as alterações nos dados CodecPrivate em elementos CodecState
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Armazenando resultado no arquivo de cache"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
