--- a/po/tr.po
+++ b/po/tr.po
@@ -11828,7 +11828,7 @@ msgstr "Değişiklikler, kareler yerine CodecState öğeleri içinde CodecPrivat
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Önbellekte saklanan sonuç dosyalandı"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
