--- a/po/bg.po
+++ b/po/bg.po
@@ -11712,7 +11712,7 @@ msgstr ""
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
