--- a/po/es.po
+++ b/po/es.po
@@ -11951,7 +11951,7 @@ msgstr "Almacena los cambios de los datos CodecPrivate en los elementos CodecSta
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Almacenar resultado en caché archivada"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
