--- a/po/eu.po
+++ b/po/eu.po
@@ -11839,7 +11839,7 @@ msgstr "Biltegiratu aldaketak CodecPrivate datuetan CodecState elementan frameta
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
