--- a/po/it.po
+++ b/po/it.po
@@ -11891,7 +11891,7 @@ msgstr "Salva le modifiche nei dati CodecPrivate negli elementi CodecState invec
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Salvataggio risultato nella cache file"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
