--- a/po/ru.po
+++ b/po/ru.po
@@ -11638,7 +11638,7 @@ msgstr "Сохранять изменения в данных CodecPrivate в э
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr "Сохранение результата в кэш-файле"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
