--- a/po/sr_RS.po
+++ b/po/sr_RS.po
@@ -11876,7 +11876,7 @@ msgstr "Skladišti promene CodecPrivate podataka u CodecState elemente umesto u 
 
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
-msgid "Storing result in cache filed"
+msgid "Storing result in cache failed"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
