program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -11957,7 +11957,7 @@ msgstr "Almacena los cambios de los datos CodecPrivate en los elementos CodecSta
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:93
 #, no-c-format
 msgid "Storing result in cache failed"
-msgstr "Almacenar resultado en caché archivada"
+msgstr "Error al almacenar el resultado en la caché"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2302
