program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11706,7 +11706,7 @@ msgstr "Скрыть вывод состояния."
 #: src/common/stereo_mode.cpp:102
 #, no-c-format
 msgid "Symbolic name"
-msgstr "Символическое имя"
+msgstr "Символьное имя"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:667
 #, no-c-format
@@ -13017,7 +13017,7 @@ msgstr "Количество бит на семпл двух звуковых д
 #: src/common/bswap.cpp:27
 #, no-c-format, c++-format
 msgid "The number of bytes to swap isn't divisible by {0}."
-msgstr "Количество байтов в свопа не делится на {0}."
+msgstr "Число байтов для подмены не делится на {0}."
 
 #: src/merge/connection_checks.h:23
 #, no-c-format, c++-format
