man page translations: update Chinese Simplified (China)

--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-man\n"
 "POT-Creation-Date: 2023-08-20 10:59+0200\n"
-"PO-Revision-Date: 2023-09-20 12:05+0200\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2023\n"
 "Language-Team: Chinese (China) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_CN/)\n"
 "Language: zh\n"
@@ -5374,7 +5374,7 @@ msgstr "按 MIME 类型选择。本格式的选择器为纯文本「<literal>mim
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:718
 msgid "&mkvpropedit; mostly tries to do the right thing by default. Therefore changes to the <option>language</option> property will cause &mkvpropedit; to apply the same change to both the new \"LanguageIETF\" element as well as the old \"Language\" element similar to how &mkvmerge; applies the language to both elements. For example, when using <literal>mkvpropedit movie.mkv --edit track:2 --set language=zh-TW</literal> the \"LanguageIETF\" element will be set to <literal>zh-TW</literal> and the old \"Language\" element to <literal>chi</literal>."
-msgstr "&mkvpropedit; 基本上会默认做正确的事。因此修改 ｢<option>language</option> ｣ 属性会令 &mkvpropedit; 将改动同时应用至 ｢LanguageIETF｣ 元素以及旧版的 ｢Language｣ 元素，与 &mkvmerge; 将语言属性应用至这两个元素的行为相似。例如，命令 ｢<literal>mkvpropedit 影片.mkv --edit track:2 --set language=zh-HK</literal>｣ 可将 ｢LanguageIETF｣ 元素设为 ｢<literal>zh-HK</literal>｣ ，同时将旧版 ｢Language｣ 元素设为 ｢<literal>chi</literal>｣。"
+msgstr "&mkvpropedit; 基本上会默认做正确的事。因此修改 ｢<option>language</option> ｣ 属性会令 &mkvpropedit; 将改动同时应用至 ｢LanguageIETF｣ 元素以及旧版的 ｢Language｣ 元素，与 &mkvmerge; 将语言属性应用至这两个元素的行为相似。例如，命令 ｢<literal>mkvpropedit 影片.mkv --edit track:2 --set language=zh-HK｣ 可将 ｢LanguageIETF｣ 元素设为 ｢<literal>zh-HK｣ ，同时将旧版 ｢Language｣ 元素设为 ｢<literal>chi</literal>｣。"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:726
