--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (80.0-0~bunkus01) mantic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 29 Oct 2023 22:06:23 +0100
+
 mkvtoolnix (79.0-0~bunkus01) lunar; urgency=low
 
   * New version.
