program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -3204,7 +3204,7 @@ msgstr "Un únic bloc de Matroska conté un fotograma complet (per al contingut 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:587
 #, no-c-format
 msgid "A subtitle track is considered to be 'forced' track if any of the following conditions are met:"
-msgstr ""
+msgstr "Una pista de subtítols es considerara «forçada» si es compleix alguna de les condicions següents:"
 
 #: src/merge/generic_reader.cpp:177
 #, no-c-format, c++-format
@@ -3566,7 +3566,7 @@ msgstr "Afegeix-los mitjançant arrossega i deixa o copia i enganxa"
 #: src/mkvtoolnix-gui/merge/adding_appending_files_dialog.cpp:29
 #, no-c-format
 msgid "Adding multiple files via 'Add source files'"
-msgstr "Afegeix múltiples fitxers mitjançant «Afegeix els fitxers font»"
+msgstr "Afegeix múltiples fitxers mitjançant «Afegeix els fitxers d'origen»"
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:959
 #, no-c-format
@@ -3862,7 +3862,7 @@ msgstr "Habilita sempre la còpia per a totes les pistes dels següents tipus, i
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2291
 #, no-c-format
 msgid "Always enable copying of &forced subtitle tracks"
-msgstr ""
+msgstr "Habilita sempre la còpia de les pistes &forçades de subtítols"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:258
 #, no-c-format
@@ -5817,9 +5817,9 @@ msgid "Derive &end timestamps from start timestamps"
 msgstr "Deriva &els codis de temps de final dels codis de temps d'inici"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:590
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Deriving the 'forced display' flag from file names is active & the file name matches the corresponding pattern."
-msgstr "La IGU pot establir l'etiqueta «Força el mostrar» per a aquestes pistes si el nom del fitxer coincideix amb aquesta expressió regular."
+msgstr "La derivació de l'etiqueta «Força el mostrar» a partir dels noms de fitxer està activada i el nom de fitxer coincideix amb el patró corresponent."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:265
 #, no-c-format
@@ -7537,7 +7537,7 @@ msgstr "Si està inhabilitada, la IGU permetrà introduir una descripció per a 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:394
 #, no-c-format
 msgid "If enabled, all subtitle tracks will have their \"default track\" flag set to \"no\" when they're added."
-msgstr "Si està habilitada, totes les pistes de subtítols tindran l'etiqueta de «Pista per omissió» establerta a «no» quan siguin afegides."
+msgstr "Si està habilitada, totes les pistes de subtítols tindran l'etiqueta «Pista per omissió» establerta a «no» quan siguin afegides."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:295
 #, no-c-format
@@ -7550,9 +7550,9 @@ msgid "If enabled, files and tracks will be sorted by track types when they're a
 msgstr "Si està habilitada, els fitxers i les pistes s'ordenaran per tipus de pista quan s'afegeixin als ajustaments de multiplexat."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:586
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If enabled, forced subtitle tracks will always be set to be copied."
-msgstr "Si està habilitada, aquests fitxers s'ometran sempre sense preguntar."
+msgstr "Si està activada, les pistes forçades de subtítols sempre s'establiran per a ser copiades."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:401
 #, no-c-format
@@ -8361,7 +8361,7 @@ msgstr "Intenta detectar seqüències de noms que probablement pertanyen a la ma
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:588
 #, no-c-format
 msgid "Its 'forced display' property is set in the source file."
-msgstr ""
+msgstr "La seva propietat de «Força el mostrar» s'estableix al fitxer d'origen."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:2247
 #, no-c-format
@@ -8371,7 +8371,7 @@ msgstr "La seva ubicació d'instal·lació no s'ha pogut determinar automàticam
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:589
 #, no-c-format
 msgid "Its name contains the word 'forced' (in English)."
-msgstr ""
+msgstr "El seu nom conté la paraula «forced» (en anglès)."
 
 #: src/common/command_line.cpp:61
 #: src/common/command_line.cpp:65
@@ -13837,7 +13837,7 @@ msgstr "El valor no s'adhereix a l'estructura general de les etiquetes d'idioma 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1486
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr "El valor per a obtenir l'etiqueta de «Força el mostrar» per als subtítols a partir dels noms de fitxer haurà de ser una expressió regular vàlida."
+msgstr "El valor per a obtenir l'etiqueta «Força el mostrar» per als subtítols a partir dels noms de fitxer haurà de ser una expressió regular vàlida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
@@ -13975,7 +13975,7 @@ msgstr "Aquesta pista AVC/H.264 no comença amb un fotograma clau). S'ometran el
 #: src/output/p_avc_es.cpp:44
 #, no-c-format
 msgid "This AVC/H.264 track's timing information indicates that it uses a variable frame rate. However, no default duration nor an external timestamp file has been provided for it, nor does the source container provide timestamps. The resulting timestamps may not be useful.\n"
-msgstr "La informació de sincronització de la pista AVC/H.264 indica que usa una velocitat dels fotogrames variable. De tota manera, no s'ha proporcionat ni la durada per omissió ni un fitxer de codis de temps extern, i tampoc el contenidor proporciona els codis de temps. Els codis de temps resultants podrien no ser útils.\n"
+msgstr "La informació de sincronització de la pista AVC/H.264 indica que usa una velocitat variable dels fotogrames. De tota manera, no s'ha proporcionat ni la durada predeterminada ni un fitxer extern de codis de temps, i tampoc el contenidor proporciona els codis de temps. Els codis de temps resultants podrien no ser útils.\n"
 
 #: src/output/p_mp3.cpp:59
 #, no-c-format, c++-format
