program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -3157,7 +3157,7 @@ msgstr "Un bloc Matroska unique contient soit une trame complète (pour du conte
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:587
 #, no-c-format
 msgid "A subtitle track is considered to be 'forced' track if any of the following conditions are met:"
-msgstr ""
+msgstr "Une piste est considérée comme « forcée » si l'une des conditions suivantes est satisfaite :"
 
 #: src/merge/generic_reader.cpp:177
 #, no-c-format, c++-format
@@ -3815,7 +3815,7 @@ msgstr "Toujours activer la copie de toutes les pistes de types suivants quelque
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2291
 #, no-c-format
 msgid "Always enable copying of &forced subtitle tracks"
-msgstr ""
+msgstr "Toujours activer la copie des pistes &forcées de sous-titres"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:258
 #, no-c-format
@@ -5769,9 +5769,9 @@ msgid "Derive &end timestamps from start timestamps"
 msgstr "Déduire les horodatages de &fin depuis les horodatages de début"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:590
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Deriving the 'forced display' flag from file names is active & the file name matches the corresponding pattern."
-msgstr "L'interface du programme peut définir l'indicateur « affichage forcé » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
+msgstr "La recherche de l'indicateur « Affichage forcé » dans les noms de fichiers est activée et le nom du fichier contient le motif correspondant."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:265
 #, no-c-format
@@ -7502,9 +7502,9 @@ msgid "If enabled, files and tracks will be sorted by track types when they're a
 msgstr "Si activé, les fichiers et pistes seront triés par types de piste quand ils sont ajoutés aux paramètres de multiplexage."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:586
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If enabled, forced subtitle tracks will always be set to be copied."
-msgstr "Si activé, de tels fichiers seront toujours ignorés sans confirmation."
+msgstr "Si activé, les pistes &forcées de sous-titres seront définies pour être copiées."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:401
 #, no-c-format
@@ -8313,7 +8313,7 @@ msgstr "Elle tente de détecter les séquences de noms qui appartiennent probabl
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:588
 #, no-c-format
 msgid "Its 'forced display' property is set in the source file."
-msgstr ""
+msgstr "Sa propriété « Affichage forcé » est définie dans le fichier source."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:2247
 #, no-c-format
@@ -8323,7 +8323,7 @@ msgstr "Son emplacement d'installation n'a pas pu être déterminé automatiquem
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:589
 #, no-c-format
 msgid "Its name contains the word 'forced' (in English)."
-msgstr ""
+msgstr "Son nom contient le terme « forced » (en Anglais)."
 
 #: src/common/command_line.cpp:61
 #: src/common/command_line.cpp:65
