program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -3164,7 +3164,7 @@ msgstr "Un singolo blocco Matroska contiene un frame pieno (per i contenuti prog
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:587
 #, no-c-format
 msgid "A subtitle track is considered to be 'forced' track if any of the following conditions are met:"
-msgstr ""
+msgstr "Una traccia sottotitoli è considerata traccia \"forzata\" se viene soddisfatta una delle seguenti condizioni:"
 
 #: src/merge/generic_reader.cpp:177
 #, no-c-format, c++-format
@@ -3824,7 +3824,7 @@ msgstr "Abilita sempre copia per tutte le tracce dei seguenti tipi indipendente 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2291
 #, no-c-format
 msgid "Always enable copying of &forced subtitle tracks"
-msgstr ""
+msgstr "Abilita sempre la copia delle tracce dei sottotitoli forzate"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:258
 #, no-c-format
@@ -5780,9 +5780,9 @@ msgid "Derive &end timestamps from start timestamps"
 msgstr "Ricava marcator&e tempo fine dal marcatore tempo inizio"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:590
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Deriving the 'forced display' flag from file names is active & the file name matches the corresponding pattern."
-msgstr "Se il nome del file corrisponde a questa espressione regolare la GUI può impostare il flag di \"visualizzazione forzata\" per tali tracce."
+msgstr "La derivazione del flag \"visualizzazione forzata\" dai nomi dei file è attiva e il nome del file corrisponde al modello corrispondente."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:265
 #, no-c-format
@@ -7516,9 +7516,9 @@ msgid "If enabled, files and tracks will be sorted by track types when they're a
 msgstr "Se abilitata, i file e le tracce quando vengono aggiunti alle impostazioni multiplex verranno ordinati per tipo di traccia."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:586
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If enabled, forced subtitle tracks will always be set to be copied."
-msgstr "Se abilitata, tali file verranno sempre ignorati senza chiedere."
+msgstr "Se abilitata, le tracce dei sottotitoli forzate verranno sempre impostate per essere copiate."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:401
 #, no-c-format
@@ -8327,7 +8327,7 @@ msgstr "Cerca di rilevare sequenze di nomi che probabilmente appartengono allo s
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:588
 #, no-c-format
 msgid "Its 'forced display' property is set in the source file."
-msgstr ""
+msgstr "La sua proprietà 'visualizzazione forzata' è impostata nel file sorgente."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:2247
 #, no-c-format
@@ -8337,7 +8337,7 @@ msgstr "Il suo percorso di installazione non può essere determinato automaticam
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:589
 #, no-c-format
 msgid "Its name contains the word 'forced' (in English)."
-msgstr ""
+msgstr "Il suo nome contiene la parola \"forced\" (in inglese)."
 
 #: src/common/command_line.cpp:61
 #: src/common/command_line.cpp:65
