program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -903,6 +903,8 @@ msgid ""
 "  --stop-after-video-ends  Stops processing after the primary video track ends,\n"
 "                           discarding any remaining packets of other tracks.\n"
 msgstr ""
+"  --stop-after-video-ends  Birincil görüntü izi sona erdikten sonra,\n"
+"                            diğer izlerin kalan paketlerini yoksayarak işlemeyi durdurur.\n"
 
 #: src/merge/mkvmerge.cpp:374
 #, no-c-format
@@ -3130,7 +3132,7 @@ msgstr "Tek bir Matroska bloğu ya tam bir kare (aşamalı içerik için) ya da 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:587
 #, no-c-format
 msgid "A subtitle track is considered to be 'forced' track if any of the following conditions are met:"
-msgstr ""
+msgstr "Bir altyazı izi, aşağıdaki koşullardan herhangi birinin karşılanması durumunda 'zorunlu' iz olarak kabul edilir:"
 
 #: src/merge/generic_reader.cpp:177
 #, no-c-format, c++-format
@@ -3788,7 +3790,7 @@ msgstr "Dillerine bakmaksızın şurada belirtilen türlerin tüm izleri için k
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2291
 #, no-c-format
 msgid "Always enable copying of &forced subtitle tracks"
-msgstr ""
+msgstr "&Zorunlu altyazı izlerinin kopyalanmasını her zaman etkinleştir"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:258
 #, no-c-format
@@ -5741,9 +5743,9 @@ msgid "Derive &end timestamps from start timestamps"
 msgstr "Bitiş zaman damgalarını başlangıç ​​zaman damgalarından tür&et"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:590
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Deriving the 'forced display' flag from file names is active & the file name matches the corresponding pattern."
-msgstr "Dosya adı bu düzenli ifadeyle eşleşirse, GKA bu tür izler için 'zorunlu görüntüle' işaretini ayarlayabilir."
+msgstr "'Zorunlu görüntüle' işaretinin dosya adlarından türetilmesi etkindir ve dosya adı karşılık gelen şekilde eşleşir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:265
 #, no-c-format
@@ -7473,9 +7475,9 @@ msgid "If enabled, files and tracks will be sorted by track types when they're a
 msgstr "Eğer etkinleştirildiyse, dosyalar ve izler, çoklama ayarlarına eklendiklerinde iz türlerine göre sıralanacaktır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:586
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If enabled, forced subtitle tracks will always be set to be copied."
-msgstr "Eğer etkinleştirildiyse, bu tür dosyalar her zaman sorulmadan atlanacaktır."
+msgstr "Eğer etkinleştirildiyse, zorunlu altyazı izleri her zaman kopyalanacak şekilde ayarlanacaktır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:401
 #, no-c-format
@@ -8284,7 +8286,7 @@ msgstr "Adını üç kısma ayırarak aynı filme ait olan adların sıralamalar
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:588
 #, no-c-format
 msgid "Its 'forced display' property is set in the source file."
-msgstr ""
+msgstr "'Zorunlu görüntüle' özelliği kaynak dosyada ayarlanmıştır."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:2247
 #, no-c-format
@@ -8294,7 +8296,7 @@ msgstr "Kurulum yeri otomatik olarak belirlenemedi."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:589
 #, no-c-format
 msgid "Its name contains the word 'forced' (in English)."
-msgstr ""
+msgstr "Adı 'forced' kelimesini içerir (İngilizce olarak)."
 
 #: src/common/command_line.cpp:61
 #: src/common/command_line.cpp:65
